Created form to add new book

--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
+    <div class="form-container">
+        <form action="">
+            <div class="title-container">
+                <label for="title">Title</label>
+                <input type="text" for="title">
+            </div>
+            <div class="author-container">
+                <label for="author">Author</label>
+                <input type="text" for="author">
+            </div>
+            <div class="pages-container">
+                <label for="pages">Pages</label>
+                <input type="number" for="pages">
+            </div>
+            <div class="read-container">
+                <label for="read">Have you already read this?</label>
+                <input type="checkbox" for="read">
+            </div>
+            <button>Add to Library</button>
+        </form>
+    </div>
     <div class="library">
         <button>NEW BOOK</button>
     </div>
