CRUD works for library

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="./script.js" defer></script>
 </head>
 <body>
-    <div class="form-container">
+    <div class="form-container hidden">
         <form action="">
             <div class="title-container">
                 <label for="title">Title</label>
@@ -26,8 +26,8 @@
                 <label for="read">Have you already read this?</label>
                 <input type="checkbox" for="read">
             </div>
-            <button>Add to Library</button>
         </form>
+        <button class="new-book">Add to Library</button>
     </div>
     <div class="library">
         <button>NEW BOOK</button>
